# fundos-backend-monolith

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ecosystem.config.js  instructions.txt  main.py  pyproject.toml  runserver.py
alembic/: env.py
alembic/versions/: 07b3e35457b4_removed_title_and_description_columns_.py  0e7cd219572c_added_columns_in_deal_min_investment_.py  32119b59581e_delete_a_column_in_deal_table.py  36bbe2a8ee98_deal_flow_db_changes.py  3dd0708a1c76_added_new_table_and_modified_a_type.py  4083115bccdb_add_onboarding_status_to_user.py  57887b0d7c6d_adding_new_columns_in_user_table_deal_.py  61c001fbd480_created_a_new_userdealpreference_table_.py  65db679d9c5e_removing_unique_constraints_from_phone_.py  6d06fa3191f6_modify_types_instrument_type_and_.py  85d5b9759074_adding_new_column_in_kyc_model_pan_bank_.py  8658a7273756_dividing_investment_table_into_.py  87f190bffde2_added_a_column_logo.py  8a86603492c5_changing_industry_and_business_model_.py  9fb07ce03b19_remove_unique_key_column_on_phone_.py  b367df37d3b7_added_a_column_in_kyc_table_pan_aadhaar_.py  cb85455d529d_added_2_columns_father_name_full_name_.py  e6df51c350e4_table_relationship_changes.py  ff8bf60e8094_make_nullable_fields_explicit.py
bkp/: test_conn.py
bkp/routes/: dummy_bkp.py
bkp/services/: dummy_bkp.py  kyc_bkp.py  send_email.py
src/: main.py
src/configs/: app_configs.py  aws_configs.py  configs.py  db_configs.py
src/db/: __init__.py  engine.py  session.py
src/logging/: logging_middleware.py  logging_setup.py
src/models/: __init__.py  deal.py  (+6 more)
(+52 files in other folders)
